--- a/danusys-drone/src/main/resources/templates/layout/base_layout.html
+++ b/danusys-drone/src/main/resources/templates/layout/base_layout.html
@@ -26,7 +26,7 @@
     <script src="/webjars/axios/0.21.1/dist/axios.js"></script>
     <script src="/js/default/default.js" defer></script>
     <script src="/js/common/common.js" defer></script>
-
+    <script src="/js/regenerateToken.js" defer></script>
     <!-- logout -->
     <script src="/js/logOut.js" defer></script>
     <th:block th:insert="view/commons/map"/>
