관제 검색조건 UI 동작 수정, 공지사항 조회 코드 개선, 통계 검색조건 UI 수정

--- a/danusys-platform/src/main/resources/templates/fragments/mntr/navL.html
+++ b/danusys-platform/src/main/resources/templates/fragments/mntr/navL.html
@@ -141,86 +141,9 @@
                                         </span>
                                 </dd>
                             </dl>
-                            <dl class="dropdown_checkbox">
-                                <dt class="checkbox_title">행정구역</dt>
-                                <dd class="checkbox_list">
-                                    <span class="checked_all">
-                                            <input type="checkbox" id="districtALL" name="">
-                                            <label for="districtALL"><span></span>전체</label>
-                                        </span>
-                                    <span>
-                                            <input type="checkbox" id="districtFind01" name="districtFind01">
-                                            <label for="districtFind01"><span></span>광명1동</label>
-                                        </span>
-                                    <span>
-                                            <input type="checkbox" id="districtFind02" name="districtFind02">
-                                            <label for="districtFind02"><span></span>광명2동</label>
-                                        </span>
-                                    <span>
-                                            <input type="checkbox" id="districtFind03" name="districtFind03">
-                                            <label for="districtFind03"><span></span>광명3동</label>
-                                        </span>
-                                    <span>
-                                            <input type="checkbox" id="districtFind04" name="districtFind04">
-                                            <label for="districtFind04"><span></span>광명4동</label>
-                                        </span>
-                                    <span>
-                                            <input type="checkbox" id="districtFind05" name="districtFind05">
-                                            <label for="districtFind05"><span></span>광명5동</label>
-                                        </span>
-                                    <span>
-                                            <input type="checkbox" id="districtFind06" name="">
-                                            <label for="districtFind06"><span></span>광명6동</label>
-                                        </span>
-                                    <span>
-                                            <input type="checkbox" id="districtFind07" name="">
-                                            <label for="districtFind07"><span></span>광명7동</label>
-                                        </span>
-                                    <span>
-                                            <input type="checkbox" id="districtFind08" name="">
-                                            <label for="districtFind08"><span></span>소하1동</label>
-                                        </span>
-                                    <span>
-                                            <input type="checkbox" id="districtFind09" name="">
-                                            <label for="districtFind09"><span></span>소하2동</label>
-                                        </span>
-                                    <span>
-                                            <input type="checkbox" id="districtFind10" name="">
-                                            <label for="districtFind10"><span></span>철산1동</label>
-                                        </span>
-                                    <span>
-                                            <input type="checkbox" id="districtFind11" name="">
-                                            <label for="districtFind11"><span></span>철산2동</label>
-                                        </span>
-                                    <span>
-                                            <input type="checkbox" id="districtFind12" name="districtFind12">
-                                            <label for="districtFind12"><span></span>철산3동</label>
-                                        </span>
-                                    <span>
-                                            <input type="checkbox" id="districtFind13" name="">
-                                            <label for="districtFind13"><span></span>철산4동</label>
-                                        </span>
-                                    <span>
-                                            <input type="checkbox" id="districtFind14" name="">
-                                            <label for="districtFind14"><span></span>하안1동</label>
-                                        </span>
-                                    <span>
-                                            <input type="checkbox" id="districtFind15" name="">
-                                            <label for="districtFind15"><span></span>하안2동</label>
-                                        </span>
-                                    <span>
-                                            <input type="checkbox" id="districtFind16" name="">
-                                            <label for="districtFind16"><span></span>하안3동</label>
-                                        </span>
-                                    <span>
-                                            <input type="checkbox" id="districtFind17" name="">
-                                            <label for="districtFind17"><span></span>하안4동</label>
-                                        </span>
-                                    <span>
-                                            <input type="checkbox" id="districtFind18" name="">
-                                            <label for="districtFind18"><span></span>학온동</label>
-                                        </span>
-                                </dd>
+                            <dl class="dropdown_checkbox" data-selectbox-type="district">
+                                <dt class="checkbox_title select" data-placeholder="행정구역 선택">행정구역</dt>
+                                <dd class="checkbox_list list"></dd>
                             </dl>
                         </form>
                         <ul class="button">
