--- a/danusys-platform/src/main/resources/templates/view/pages/config/userGroup.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/userGroup.html
@@ -220,7 +220,7 @@
                         <span><input type="text" placeholder="사용자 계정 검색"></span>
                     </p>
                     <div class="list_table">
-                        <table>
+                        <table id="userInGroupTable">
                             <thead>
                             <tr>
                                 <th>Index</th>
