관제 왼쪽UI 처리 및 api webclient 처리중1

--- a/danusys-platform/src/main/resources/templates/fragments/mntr/navL.html
+++ b/danusys-platform/src/main/resources/templates/fragments/mntr/navL.html
@@ -502,7 +502,7 @@
                     </div>
                 </div>
                 <dl class="area_title">
-                    <dt><i><img src="/images/default/titleIcon02.svg"></i>긴급 이벤트<span class="count">11</span></dt>
+                    <dt><i><img src="/images/default/titleIcon02.svg"></i>이벤트 목록<span class="count">11</span></dt>
                     <dd>
                         <select>
                             <option>번호 올림차순</option>
@@ -519,6 +519,12 @@
                     </dl>
                     <dl>
                         <dt>EVENT ID<span class="state">종료</span></dt>
+                        <dd class="event_level"><span class="level lv2">주의</span>정전</dd>
+                        <dd>경기 광명시 소하동 1294</dd>
+                        <dd>2022-03-14 10:44:26<span class="ago">1분 전</span></dd>
+                    </dl>
+                    <dl>
+                        <dt>EVENT ID<span class="state">종료</span></dt>
                         <dd class="event_level"><span class="level lv1">긴급</span>정전</dd>
                         <dd>경기 광명시 소하동 1294</dd>
                         <dd>2022-03-14 10:44:26<span class="ago">1분 전</span></dd>
@@ -526,48 +532,6 @@
                     <dl>
                         <dt>EVENT ID<span class="state">종료</span></dt>
                         <dd class="event_level"><span class="level lv1">긴급</span>정전</dd>
-                        <dd>경기 광명시 소하동 1294</dd>
-                        <dd>2022-03-14 10:44:26<span class="ago">1분 전</span></dd>
-                    </dl>
-                    <dl>
-                        <dt>EVENT ID<span class="state">종료</span></dt>
-                        <dd class="event_level"><span class="level lv1">긴급</span>정전</dd>
-                        <dd>경기 광명시 소하동 1294</dd>
-                        <dd>2022-03-14 10:44:26<span class="ago">1분 전</span></dd>
-                    </dl>
-                    <p class="button_top"><img src="/images/default/arrowNext.svg"></p>
-                </div>
-                <dl class="area_title">
-                    <dt><i><img src="/images/default/titleIcon02.svg"></i>주의 이벤트<span class="count">11</span></dt>
-                    <dd>
-                        <select>
-                            <option>번호 올림차순</option>
-                            <option>번호 내림차순</option>
-                        </select>
-                    </dd>
-                </dl>
-                <div class="search_list">
-                    <dl>
-                        <dt>EVENT ID<span class="state">종료</span></dt>
-                        <dd class="event_level"><span class="level lv2">주의</span>정전</dd>
-                        <dd>경기 광명시 소하동 1294</dd>
-                        <dd>2022-03-14 10:44:26<span class="ago">1분 전</span></dd>
-                    </dl>
-                    <dl>
-                        <dt>EVENT ID<span class="state">종료</span></dt>
-                        <dd class="event_level"><span class="level lv2">주의</span>정전</dd>
-                        <dd>경기 광명시 소하동 1294</dd>
-                        <dd>2022-03-14 10:44:26<span class="ago">1분 전</span></dd>
-                    </dl>
-                    <dl>
-                        <dt>EVENT ID<span class="state">종료</span></dt>
-                        <dd class="event_level"><span class="level lv2">주의</span>정전</dd>
-                        <dd>경기 광명시 소하동 1294</dd>
-                        <dd>2022-03-14 10:44:26<span class="ago">1분 전</span></dd>
-                    </dl>
-                    <dl>
-                        <dt>EVENT ID<span class="state">종료</span></dt>
-                        <dd class="event_level"><span class="level lv2">주의</span>정전</dd>
                         <dd>경기 광명시 소하동 1294</dd>
                         <dd>2022-03-14 10:44:26<span class="ago">1분 전</span></dd>
                     </dl>
@@ -871,7 +835,7 @@
                     </div>
                 </div>
                 <dl class="area_title">
-                    <dt><i><img src="/images/default/titleIcon02.svg"></i>긴급 이벤트</dt>
+                    <dt><i><img src="/images/default/titleIcon02.svg"></i>이벤트 목록</dt>
                     <dd><span class="count">11</span></dd>
                 </dl>
                 <div class="search_list">
@@ -883,7 +847,7 @@
                     </dl>
                     <dl>
                         <dt>DRONE ID<span class="state">종료</span></dt>
-                        <dd class="event_level"><span class="level lv1">긴급</span>연기 감지</dd>
+                        <dd class="event_level"><span class="level lv2">주의</span>저전압 경보</dd>
                         <dd>경기 광명시 소하동 1294</dd>
                         <dd>2022-03-14 10:44:26<span class="ago">1분 전</span></dd>
                     </dl>
@@ -896,31 +860,6 @@
                     <dl>
                         <dt>DRONE ID<span class="state">종료</span></dt>
                         <dd class="event_level"><span class="level lv1">긴급</span>비행금지구역 진입</dd>
-                        <dd>경기 광명시 소하동 1294</dd>
-                        <dd>2022-03-14 10:44:26<span class="ago">1분 전</span></dd>
-                    </dl>
-                    <p class="button_top"><img src="/images/default/arrowNext.svg"></p>
-                </div>
-                <dl class="area_title">
-                    <dt><i><img src="/images/default/titleIcon02.svg"></i>주의 이벤트</dt>
-                    <dd><span class="count">11</span></dd>
-                </dl>
-                <div class="search_list">
-                    <dl>
-                        <dt>DRONE ID<span class="state">종료</span></dt>
-                        <dd class="event_level"><span class="level lv2">주의</span>저전압 경보</dd>
-                        <dd>경기 광명시 소하동 1294</dd>
-                        <dd>2022-03-14 10:44:26<span class="ago">1분 전</span></dd>
-                    </dl>
-                    <dl>
-                        <dt>DRONE ID<span class="state">종료</span></dt>
-                        <dd class="event_level"><span class="level lv2">주의</span>화재주의구간 비행</dd>
-                        <dd>경기 광명시 소하동 1294</dd>
-                        <dd>2022-03-14 10:44:26<span class="ago">1분 전</span></dd>
-                    </dl>
-                    <dl>
-                        <dt>DRONE ID<span class="state">종료</span></dt>
-                        <dd class="event_level"><span class="level lv2">주의</span>저고도 비행</dd>
                         <dd>경기 광명시 소하동 1294</dd>
                         <dd>2022-03-14 10:44:26<span class="ago">1분 전</span></dd>
                     </dl>
