--- a/danusys-platform/src/main/resources/static/css/monitoring.css
+++ b/danusys-platform/src/main/resources/static/css/monitoring.css
@@ -82,9 +82,9 @@
 .search_fold ul.button li{display: flex; align-items: center; justify-content: space-between;}
 
 /* dropdown_checkbox */
-.search_fold dl.dropdown_checkbox{position: relative; padding: 0px;}
+.search_fold dl.dropdown_checkbox{padding: 0px;}
 .search_fold dl.dropdown_checkbox .checkbox_title{width: 100%; height: 34px; line-height: 32px; margin: 0px; padding: 0px 14px; color: #dee0e4; font-size: 14px; box-sizing: border-box; border: 1px solid #292c34; border-radius: 3px; background: url("../images/default/arrowSelectBox.svg") 248px center no-repeat #1a1b1d; background-size: 14px; cursor: pointer;}
-.search_fold dl.dropdown_checkbox .checkbox_list{z-index: 1; overflow: hidden; position: absolute; top: 33px; width: 100%; display: grid; grid-template-columns: 1fr 1fr; grid-gap: 8px 14px; padding: 10px 12px; box-sizing: border-box; border-bottom-left-radius: 4px; border-bottom-right-radius: 4px; border: 1px solid #292c34; background: #1a1b1d;}
+.search_fold dl.dropdown_checkbox .checkbox_list{z-index: 1; overflow: hidden; width: 100%; display: grid; grid-template-columns: 1fr 1fr; grid-gap: 8px 14px; margin: -15px 0px 0px 0px; padding: 10px 12px; box-sizing: border-box; border-bottom-left-radius: 4px; border-bottom-right-radius: 4px; border: 1px solid #292c34; background: #1a1b1d;}
 .search_fold dl.dropdown_checkbox .checkbox_list:not(.select){display: none;}
 .search_fold dl.dropdown_checkbox .checkbox_list > span.checked_all{grid-column: 1 / 3;}
 .search_fold dl.dropdown_checkbox .checkbox_list > span > label{display: block; max-width: 120px; overflow: hidden; white-space: nowrap; text-overflow: ellipsis; line-height: 18px; font-size: 13px;}
