엑셀다운로드 공통기능 수정, 공지사항 엑셀다운로드 시 날짜 오류 수정

--- a/danusys-platform/src/main/resources/templates/fragments/default/header.html
+++ b/danusys-platform/src/main/resources/templates/fragments/default/header.html
@@ -13,6 +13,7 @@
         <ul class="util_menu">
             <li><i><img src="/images/default/utmenu01.svg"></i>알림</li>
             <li><i><img src="/images/default/utmenu02.svg"></i>admin 님</li>
+            <li><i><img src="/images/default/.svg"></i>로그아웃</li>
         </ul>
     </header>
 </th:block>
