--- a/danusys-platform/src/main/resources/static/css/monitoring.css
+++ b/danusys-platform/src/main/resources/static/css/monitoring.css
@@ -162,7 +162,7 @@
 
 
 /* map_location */
-.map_location{position: absolute; top: 10px; left: 10px; z-index: 10; display: flex; align-items: center; justify-content: space-around; width: 324px; height: 40px; box-sizing: border-box; background: #1e1f23; border-radius: 4px;}
+.map_location{position: absolute; top: 10px; left: 10px; z-index: 10; display: flex; align-items: center; justify-content: space-around; width: max-content; height: 40px; box-sizing: border-box; background: #1e1f23; border-radius: 4px;}
 .map_location ul{display: flex; align-items: center; justify-content: center; flex: 1; grid-gap: 4px; height: 100%; padding: 0px 14px; text-align: center; border-right: 1px solid #292c34; box-sizing: border-box;}
 .map_location ul li{flex: 1; display: flex; justify-content: flex-start; grid-gap: 8px; font-size: 14px; color: #7f8491;}
 .map_location ul li:nth-last-child(1){flex: initial;}
@@ -213,7 +213,7 @@
 .popup div.list_search .list_table table tbody td{vertical-align: middle; text-align: center; font-size: 14px; color: #dee0e4;}
 
 
-.popup_mini{overflow: inherit; position: relative; top: 50%; left: 50%; transform: translate(-50%, -5%); display: flex; flex-direction: column; width: 280px;  padding: 14px 16px; border-radius: 10px; box-shadow: 0px 0px 20px rgba(0,0,0,0.5); background: #1e1f23;}
+.popup_mini{overflow: inherit; position: relative; top: 50%; left: 50%; transform: translate(-50%, -5%); display: flex; flex-direction: column; width: max-content;  padding: 14px 36px 14px 14px; border-radius: 10px; box-shadow: 0px 0px 20px rgba(0,0,0,0.5); background: #1e1f23;}
 .popup_mini::after{content: '▼'; position: absolute; bottom: 0px; left: 50%; transform: translate(-50%, 19px); z-index: 10; font-size: 28px; color: #1e1f23;}
 
 .popup_mini dl{display: flex; flex-direction: column;}
