--- a/danusys-platform/src/main/resources/templates/view/pages/config/userGroup.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/config/userGroup.html
@@ -16,10 +16,10 @@
     <section class="setting_content">
         <article class="search_form" id="searchForm">
             <h6>사용자 그룹 검색</h6>
-            <form>
+            <form action="javascript:void(0);">
                 <div>
                     <dl class="search_text_set">
-                        <dd><input type="text" placeholder="검색어를 입력하세요." name="keyword"></dd>
+                        <dd><input type="text" placeholder="검색어를 입력하세요." name="keyword" onkeydown="if(event.keyCode==13){account.group.create();}"></dd>
                         <dd class="button" id="resetFormBtn"><i><img src="/images/default/return.svg"></i>검색조건 초기화</dd>
                         <dd class="button" id="searchBtn"><i><img src="/images/default/search.svg"></i>검색</dd>
                     </dl>
