--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/eventDron.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/eventDron.html
@@ -19,8 +19,8 @@
                         <dt>이벤트 종류</dt>
                         <dd>
                             <div class="dropdown_checkbox" data-selectbox-type="eventKind">
-                                <p class="checkbox_title checkbox_title_event select" data-placeholder="이벤트 종류 선택">이벤트 종류 선택</p>
-                                <ul class="checkbox_list checkbox_list_event list"></ul>
+                                <p class="checkbox_title select" data-placeholder="이벤트 종류 선택">이벤트 종류 선택</p>
+                                <ul class="checkbox_list list"></ul>
                             </div>
                         </dd>
                     </dl>
@@ -62,8 +62,8 @@
                         <dt>행정구역</dt>
                         <dd>
                             <div class="dropdown_checkbox" data-selectbox-type="district">
-                                <p class="checkbox_title checkbox_title_district select" data-placeholder="행정구역 선택">행정구역 선택</p>
-                                <ul class="checkbox_list checkbox_list_district list"></ul>
+                                <p class="checkbox_title select" data-placeholder="행정구역 선택">행정구역 선택</p>
+                                <ul class="checkbox_list list"></ul>
                             </div>
                         </dd>
                     </dl>
