--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/facilities.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/facilities.html
@@ -17,8 +17,8 @@
                         <dt>시설물 종류</dt>
                         <dd>
                             <div class="dropdown_checkbox" data-selectbox-type="facilityKind">
-                                <p class="checkbox_title checkbox_title_facilities select" data-placeholder="시설물 종류 선택">시설물 종류 선택</p>
-                                <ul class="checkbox_list checkbox_list_facilities list">
+                                <p class="checkbox_title select" data-placeholder="시설물 종류 선택">시설물 종류 선택</p>
+                                <ul class="checkbox_list list">
                                     <li>
                                         <span>
                                             <input type="checkbox" id="facilitiesAll" name="checkAll">
@@ -111,8 +111,8 @@
                         <dt>행정구역</dt>
                         <dd>
                             <div class="dropdown_checkbox" data-selectbox-type="district">
-                                <p class="checkbox_title checkbox_title_district select" data-placeholder="행정구역 선택">행정구역 선택</p>
-                                <ul class="checkbox_list checkbox_list_district list">
+                                <p class="checkbox_title select" data-placeholder="행정구역 선택">행정구역 선택</p>
+                                <ul class="checkbox_list list">
                                     <li>
                                                 <span>
                                                     <input type="checkbox" id="districtALL" name="checkAll">
