--- a/danusys-platform/src/main/resources/templates/view/pages/inqry/station.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/inqry/station.html
@@ -17,8 +17,8 @@
                         <dt>개소 종류</dt>
                         <dd>
                             <div class="dropdown_checkbox" data-selectbox-type="stationKind">
-                                <p class="checkbox_title checkbox_title_station select" data-placeholder="개소 종류 선택">개소 종류 선택</p>
-                                <ul class="checkbox_list checkbox_list_station list">
+                                <p class="checkbox_title select" data-placeholder="개소 종류 선택">개소 종류 선택</p>
+                                <ul class="checkbox_list list">
                                     <li>
                                                 <span>
                                                     <input type="checkbox" id="stationALL" name="checkAll">
@@ -43,8 +43,8 @@
                         <dt>시설물 종류</dt>
                         <dd>
                             <div class="dropdown_checkbox" data-selectbox-type="facilityKind">
-                                <p class="checkbox_title checkbox_title_station_find select" data-placeholder="시설물 종류 선택">시설물 종류 선택</p>
-                                <ul class="checkbox_list checkbox_list_station_find list">
+                                <p class="checkbox_title select" data-placeholder="시설물 종류 선택">시설물 종류 선택</p>
+                                <ul class="checkbox_list list">
                                     <li>
                                                 <span>
                                                     <input type="checkbox" id="stationALL" name="checkAll">
@@ -84,8 +84,8 @@
                         <dt>행정구역</dt>
                         <dd>
                             <div class="dropdown_checkbox" data-selectbox-type="district">
-                                <p class="checkbox_title checkbox_title_district select" data-placeholder="행정구역 선택">행정구역 선택</p>
-                                <ul class="checkbox_list checkbox_list_district list">
+                                <p class="checkbox_title select" data-placeholder="행정구역 선택">행정구역 선택</p>
+                                <ul class="checkbox_list list">
                                     <li>
                                                 <span>
                                                     <input type="checkbox" id="districtALL" name="checkAll">
