--- a/danusys-platform/src/main/resources/templates/view/pages/stats/statistics_01.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/stats/statistics_01.html
@@ -21,8 +21,8 @@
                         <dt>이벤트 종류</dt>
                         <dd>
                             <div class="dropdown_checkbox">
-                                <p class="checkbox_title checkbox_title_event">이벤트 종류 선택</p>
-                                <ul class="checkbox_list checkbox_list_event">
+                                <p class="checkbox_title ">이벤트 종류 선택</p>
+                                <ul class="checkbox_list">
                                     <li>
 											<span>
 											<input type="checkbox" id="eventALL" name="">
@@ -77,8 +77,8 @@
                         <dt>행정구역</dt>
                         <dd>
                             <div class="dropdown_checkbox">
-                                <p class="checkbox_title checkbox_title_district">행정구역 선택</p>
-                                <ul class="checkbox_list checkbox_list_district">
+                                <p class="checkbox_title ">행정구역 선택</p>
+                                <ul class="checkbox_list ">
                                     <li>
 											<span>
 											<input type="checkbox" id="districtALL" name="">
@@ -183,8 +183,8 @@
                         <dt>장소유형</dt>
                         <dd>
                             <div class="dropdown_checkbox">
-                                <p class="checkbox_title checkbox_title_district">장소유형 선택</p>
-                                <ul class="checkbox_list checkbox_list_district">
+                                <p class="checkbox_title ">장소유형 선택</p>
+                                <ul class="checkbox_list ">
                                     <li>
 											<span>
 											<input type="checkbox" id="districtALL" name="">
