--- a/danusys-platform/src/main/resources/templates/view/pages/stats/statistics_02.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/stats/statistics_02.html
@@ -21,53 +21,53 @@
                         <dt>이벤트 종류</dt>
                         <dd>
                             <div class="dropdown_checkbox">
-                                <p class="checkbox_title checkbox_title_event">이벤트 종류 선택</p>
-                                <ul class="checkbox_list checkbox_list_event">
+                                <p class="checkbox_title">이벤트 종류 선택</p>
+                                <ul class="checkbox_list">
                                     <li>
-											<span>
+                                        <span>
 											<input type="checkbox" id="eventALL" name="">
 											<label for="eventALL"><span></span>전체</label>
-											</span>
+                                        </span>
                                     </li>
                                     <li>
-											<span>
+                                        <span>
 											<input type="checkbox" id="eventFind01" name="">
 											<label for="eventFind01"><span></span>지능형 CCTV 감지</label>
-											</span>
+                                        </span>
                                         <span>
 											<input type="checkbox" id="eventFind02" name="">
 											<label for="eventFind02"><span></span>이상음원 감지</label>
-											</span>
+                                        </span>
                                     </li>
                                     <li>
-											<span>
+                                        <span>
 											<input type="checkbox" id="eventFind03" name="">
 											<label for="eventFind03"><span></span>AED 사용</label>
-											</span>
+                                        </span>
                                         <span>
 											<input type="checkbox" id="eventFind04" name="">
 											<label for="eventFind04"><span></span>비상벨</label>
-											</span>
+                                        </span>
                                     </li>
                                     <li>
-											<span>
+                                        <span>
 											<input type="checkbox" id="eventFind05" name="">
 											<label for="eventFind05"><span></span>금연벨</label>
-											</span>
+                                        </span>
                                         <span>
 											<input type="checkbox" id="eventFind06" name="">
 											<label for="eventFind06"><span></span>장기체류자</label>
-											</span>
+                                        </span>
                                     </li>
                                     <li>
-											<span>
+                                        <span>
 											<input type="checkbox" id="eventFind07" name="">
 											<label for="eventFind07"><span></span>실내공기질 나쁨</label>
-											</span>
+                                        </span>
                                         <span>
 											<input type="checkbox" id="eventFind08" name="">
 											<label for="eventFind08"><span></span>기타</label>
-											</span>
+                                        </span>
                                     </li>
                                 </ul>
                             </div>
@@ -77,8 +77,8 @@
                         <dt>행정구역</dt>
                         <dd>
                             <div class="dropdown_checkbox">
-                                <p class="checkbox_title checkbox_title_district">행정구역 선택</p>
-                                <ul class="checkbox_list checkbox_list_district">
+                                <p class="checkbox_title ">행정구역 선택</p>
+                                <ul class="checkbox_list ">
                                     <li>
 											<span>
 											<input type="checkbox" id="districtALL" name="">
@@ -183,8 +183,8 @@
                         <dt>장소유형</dt>
                         <dd>
                             <div class="dropdown_checkbox">
-                                <p class="checkbox_title checkbox_title_district">장소유형 선택</p>
-                                <ul class="checkbox_list checkbox_list_district">
+                                <p class="checkbox_title ">장소유형 선택</p>
+                                <ul class="checkbox_list ">
                                     <li>
 											<span>
 											<input type="checkbox" id="districtALL" name="">
